--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.6",
+    "qrcode": "^1.4.4",
     "sequelize": "^6.3.5"
   },
   "bugs": {
