--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
+    "jquery": "^3.5.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.6",
     "qrcode": "^1.4.4",
